Implement api key and addresses validation
